# keyboard_layout_optimizer

./: .gitignore  .gitmodules  0.bootstrap.js  0.bootstrap.worker.js  1-gramme.arne.no-special.txt  1-gramme.arne.txt  1.bootstrap.js  1.bootstrap.worker.js  10.bootstrap.worker.js  11.bootstrap.worker.js  12.bootstrap.worker.js  13.bootstrap.worker.js  14.bootstrap.worker.js  15.bootstrap.worker.js  16.bootstrap.worker.js  17.bootstrap.worker.js  19.bootstrap.worker.js  2-gramme.arne.no-special.txt  2.bootstrap.js  2.bootstrap.worker.js  20.bootstrap.worker.js  21.bootstrap.worker.js  22.bootstrap.worker.js  23.bootstrap.worker.js  24.bootstrap.worker.js  25.bootstrap.worker.js  26.bootstrap.worker.js  27.bootstrap.worker.js  28.bootstrap.worker.js  29.bootstrap.worker.js  3.bootstrap.js  30.bootstrap.worker.js  31.bootstrap.worker.js  32.bootstrap.worker.js  33.bootstrap.worker.js  34.bootstrap.worker.js  35.bootstrap.worker.js  36.bootstrap.worker.js  37.bootstrap.worker.js  38.bootstrap.worker.js  (+97 more)
config/: crkbd.yml  evaluation_parameters.yml  evaluation_parameters_arnebab.yml  moonlander.yml  optimization_parameters.yml  optimization_parameters_abc.yml  optimization_parameters_sa.yml  optimization_parameters_sa_web.yml  optimization_parameters_web.yml  ortho.yml  ortho_bored.yml  standard_keyboard.yml  standard_keyboard_qwerty.yml  standard_keyboard_qwerty_uk.yml  standard_keyboard_qwerty_us.yml
evolve_keyboard_layout/: Cargo.toml
evolve_keyboard_layout/src/: common.rs
evolve_keyboard_layout_wasm/: .gitignore  Cargo.toml
evolve_keyboard_layout_wasm/src/: lib.rs
evolve_keyboard_layout_wasm/www/: app.js  bootstrap.js  communicate.js  index.html  package.json  webpack.config.js  worker.js
keyboard_layout/: Cargo.toml
keyboard_layout/src/: config.rs  grouped_layout_generator.rs  key.rs  keyboard.rs  layout.rs  layout_generator.rs  lib.rs  neo_layout_generator.rs
keyboard_layout_optimizer/: Cargo.toml
keyboard_layout_optimizer/src/: common.rs
layout_evaluation/: Cargo.toml
layout_evaluation/benches/: evaluate.rs
layout_evaluation/src/: cache.rs  config.rs  evaluation.rs  lib.rs  metrics.rs  ngram_mapper.rs  ngrams.rs  results.rs
layout_evaluation/src/metrics/: asymmetric_bigrams.rs  asymmetric_keys.rs  bigram_metrics.rs  finger_balance.rs  finger_repeats.rs  finger_repeats_top_bottom.rs  hand_disbalance.rs  irregularity.rs  key_costs.rs  layout_metrics.rs  line_changes.rs  manual_bigram_penalty.rs  mod.rs  movement_pattern.rs  no_handswitch_after_unbalancing_key.rs  no_handswitch_in_trigram.rs  secondary_bigrams.rs  shortcut_keys.rs  trigram_metrics.rs  unbalancing_after_neighboring.rs  unigram_metrics.rs
layout_evaluation/src/metrics/bigram_metrics/: finger_repeats.rs  finger_repeats_lateral.rs  finger_repeats_top_bottom.rs  kla_distance.rs  kla_finger_usage.rs  kla_same_finger.rs  kla_same_hand.rs  line_changes.rs  manual_bigram_penalty.rs  mod.rs  movement_pattern.rs  movement_pattern_same_row.rs  no_handswitch_after_unbalancing_key.rs  oxey_lsbs.rs  oxey_sfbs.rs  rolls.rs  symmetric_handswitches.rs  unbalancing_after_neighboring.rs
layout_evaluation/src/metrics/layout_metrics/: asymmetric_keys.rs  kla_home_key_words.rs  kla_same_finger_words.rs  mod.rs  shortcut_keys.rs  similar_letter_groups.rs  similar_letters.rs
layout_evaluation/src/metrics/trigram_metrics/: irregularity.rs  mod.rs  no_handswitch_in_trigram.rs  oxey_alternates.rs  oxey_alternates_sfs.rs  oxey_bad_redirects.rs  oxey_combined_trigram.rs  oxey_dsfbs.rs  oxey_inward_rolls.rs  oxey_onehands.rs  oxey_outward_rolls.rs  oxey_redirects.rs  rolls.rs  secondary_bigrams.rs  trigram_finger_repeats.rs  trigram_rolls.rs
layout_evaluation/src/metrics/unigram_metrics/: column_loads.rs  finger_balance.rs  hand_disbalance.rs  key_costs.rs  mod.rs  modifier_usage.rs  row_loads.rs
layout_evaluation/src/ngram_mapper/: bigram_mapper.rs  common.rs  mod.rs  on_demand_ngram_mapper.rs  trigram_mapper.rs  unigram_mapper.rs
layout_evaluation/src/ngrams/: bigram_mapper.rs  common.rs  mod.rs  ngrams.rs  on_demand_ngram_mapper.rs  trigram_mapper.rs  unigram_mapper.rs
layout_optimization/: Cargo.toml
layout_optimization/layout_optimization_abc/: Cargo.toml  README.md
layout_optimization/layout_optimization_abc/src/: optimization.rs
layout_optimization/layout_optimization_common/: Cargo.toml
layout_optimization/layout_optimization_common/src/: lib.rs
layout_optimization/layout_optimization_genetic/: Cargo.toml  README.md
layout_optimization/layout_optimization_genetic/src/: optimization.rs
layout_optimization/layout_optimization_sa/: Cargo.toml  README.md
layout_optimization/layout_optimization_sa/src/: optimization.rs
layout_optimization/src/: common.rs  lib.rs  optimization.rs  optimization_abc.rs  optimization_sa.rs
layout_optimization_abc/: Cargo.toml
layout_optimization_genevo/: Cargo.toml
layout_optimization_genevo/src/: optimization.rs
layout_optimization_sa/: Cargo.toml
layout_optimization_sa/src/: optimization.rs
layouts_webservice/: Cargo.toml  Rocket.toml  RustConfig  docker-compose.yml  setup_heroku.sh
layouts_webservice/db/migrations/: 20211102000000_create-layouts-table.sql  20220110105245_add_layout_config.sql
layouts_webservice/src/: api.rs  main.rs  sqlx.rs
layouts_webservice/static/: app.css  app.js  index.html  index.js  vue-components.js
ngrams/: parse_oxey_json.py
scripts/: compare_korpora.py  evaluate_found_layouts.sh  publish_established_layouts.sh  publish_found_layouts.sh  publish_layout.sh  remove_duplicate_found_layouts.py
webui/layout_evaluation_wasm/: Cargo.toml
webui/layout_evaluation_wasm/src/: lib.rs
webui/layout_evaluation_wasm/www/: app.js  codemirror.css  index.html  package.json  webpack.config.js  worker.js
webui/layouts_webservice/: Cargo.toml  Dockerfile  Rocket.toml  reset_heroku_repo.sh  setup_heroku.sh
webui/layouts_webservice/db/migrations/: 20211102000000_create-layouts-table.sql
webui/layouts_webservice/src/: api.rs  main.rs
webui/layouts_webservice/static/: app.css  app.js  index.html  vue-components.js
(+85 files in other folders)
