[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "evolve_keyboard_layout"
version = "0.1.0"

default-run = "evaluate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }
layout_evaluation = { path = "../layout_evaluation" }
layout_optimization = { path = "../layout_optimization" }
layout_optimization_abc = { path = "../layout_optimization_abc" }
layout_optimization_genevo = { path = "../layout_optimization_genevo" }
layout_optimization_sa = { path = "../layout_optimization_sa" }

anyhow = "*"
dotenv = "*"
env_logger = "*"
log = "*"
rand = "*"
rayon = "1.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# for a MUSL build use the following line instead
# reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }

rustc-hash = "*"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "*"
structopt = "*"

[profile.release]
lto = true
