[package]
name = "keyboard_layout"
version = "0.1.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="^1.0", features=[ "derive" ]}
serde_json = "^1.0"
serde_yaml = "*"
anyhow = "*"

thiserror = "*"
handlebars = "*"

rustc-hash = "*"


log = "*"
