[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "keyboard_layout"
rust-version = "1.59"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "*"

handlebars = "*"
thiserror = "*"

rustc-hash = "^1.1.0"

log = "*"
