[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "keyboard_layout_optimizer"
rust-version = "1.60"
version = "0.1.0"

default-run = "evaluate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }
layout_evaluation = { path = "../layout_evaluation" }
layout_optimization_common = { path = "../layout_optimization/layout_optimization_common" }
layout_optimization_genetic = { path = "../layout_optimization/layout_optimization_genetic" }
layout_optimization_sa = { path = "../layout_optimization/layout_optimization_sa" }

ahash = "0.7.6"
anyhow = "*"
clap = { version = "^3.0.0", features = ["derive"] }
colored = "^2.0.0"
ctrlc = "^3.2.1"
dotenv = "*"
env_logger = "*"
itertools = "*"
log = "*"
rand = "*"
rayon = "^1.5.1"
reqwest = { version = "^0.11", features = ["blocking", "json"] }

# for a MUSL build use the following line instead
# reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "*"
