[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_evaluation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }

anyhow = "*"
colored = "*"
env_logger = "*"
log = "*"
ordered-float = "*"
priority-queue = "*"
rustc-hash = "1.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "*"


[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
harness = false
name = "evaluate"
