[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_evaluation"
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }

ahash = { version = "0.7.6", features = ["serde"] }
anyhow = "*"
colored = "*"
env_logger = "*"
log = "*"
ordered-float = "*"
parking_lot = "0.12.0"
priority-queue = "*"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "*"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
harness = false
name = "evaluate"
