[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_evaluation"
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }

ahash = { version = "0.7.6", features = ["serde"] }
anyhow = "1.0.65"
colored = "2.0.0"
csv = "1.1"
env_logger = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
ordered-float = "3.2.0"
parking_lot = "0.12.0"
priority-queue = "1.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
harness = false
name = "evaluate"
