[package]
name = "layout_optimization"
version = "0.1.0"
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path="../keyboard_layout" }
layout_evaluation = { path="../layout_evaluation" }

serde = { version="^1.0", features=[ "derive" ]}
serde_yaml = "*"
anyhow = "*"
env_logger = "*"
log = "*"
rand = "*"
abc = "*"
num_cpus = "*"

rustc-hash = "*"

genevo = "*"
