[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_optimization_genevo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }
layout_evaluation = { path = "../layout_evaluation" }
layout_optimization = { path = "../layout_optimization" }

anyhow = "1.0.45"
env_logger = "*"
genevo = "0.7.0"
log = "*"
rand = "0.8.4"
rustc-hash = "1.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.21"
