[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_optimization_sa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }
layout_evaluation = { path = "../layout_evaluation" }
layout_optimization = { path = "../layout_optimization" }

anyhow = "1.0.45"
argmin = "0.4.7"
colored = "2.0.0"
env_logger = "*"
log = "*"
rand = "0.8.4"
rustc-hash = "1.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.21"
