[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_optimization_sa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }
layout_optimization_common = { path = "../layout_optimization_common" }

anyhow = "1.0.45"
argmin = { version = "0.5.0", features = ["wasm-bindgen"] }
colored = "2.0.0"
env_logger = "*"
log = "*"
rand = "0.8.4"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rustc-hash = "1.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.21"
