[package]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layouts_webservice"
publish = false
rust-version = "1.60"
version = "0.1.0"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }

rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }

sqlx = { version = "^0.5.1", default-features = false, features = [
  "macros",
  "offline",
  "migrate",
  "postgres",
] }

ahash = "0.7.6"
anyhow = "*"
async-trait = "*"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"

keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }
