[package]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layouts_webservice"
publish = false
rust-version = "1.60"
version = "0.1.0"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }

rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }

sqlx = { version = "^0.6.0", default-features = false, features = [
  "macros",
  "offline",
  "migrate",
  "postgres",
] }

ahash = "0.7.6"
anyhow = "1.0.65"
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"

keyboard_layout = { path = "../../keyboard_layout" }
layout_evaluation = { path = "../../layout_evaluation" }
